<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#fff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/liendologo22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
       android:layout_height="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="#D0D3D4"
            android:hint="@string/enter_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="#D0D3D4"
            android:hint="@string/enter_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="#D0D3D4"
            android:hint="@string/enter_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="#D0D3D4"
            android:hint="@string/enter_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/next_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="#8088"
            android:layout_marginTop="20dp"
            android:hint="@string/next" />

        <Button
            android:id="@+id/back_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:backgroundTint="#8088"
            android:hint="@string/back" />

    </LinearLayout>

</LinearLayout>